@@ -94,7 +94,7 @@ There's also a <a href="CHANGELOG">CHANGELOG</a> available. </p>
   <li><a href="mailto:mal@wyrd.be">Lieven Marchand</a> </li>
   <li><a href="mailto:drew.mcdermott@yale.edu">Drew McDermott</a> </li>
   <li><a href="mailto:reti@ai.mit.edu">Kalman Reti</a> </li>
-  <li><a href="mailto:Alberto.Riva@TCH.Harvard.edu">Alberto Riva</a> </li>
+  <li><a href="mailto:alb@chip.org">Alberto Riva</a> </li>
   <li><a href="mailto:rschlatte@ist.tu-graz.ac.at">Rudi Schlatte</a> </li>
   <li><a href="mailto:emres@bilgi.edu.tr">Emre Sevin&ccedil;</a></li>
   <li>Paul Tarvydas </li>
@@ -109,13 +109,14 @@ There's also a <a href="CHANGELOG">CHANGELOG</a> available. </p>
   <li>
   <a href="http://www.lispworks.com/documentation/HyperSpec/Front/index.htm">
   The Common Lisp HyperSpec</a> by Kent M. Pitman </li>
+  <li><a href="http://www.gigamonkeys.com/book/">Practical Common Lisp</a> by Peter Seibel</li>
+  <li><a href="http://en.wikibooks.org/wiki/Programming:Common_Lisp">Programming:Common Lisp</a> from Wikibooks</li>
   <li>Daniel Barlow's <a href="http://ww.telent.net/cliki">CLiki</a> </li>
   <li><a href="http://www-jcsu.jesus.cam.ac.uk/~csr21/lispfaq.html">The new
   comp.lang.lisp FAQ</a> by Christophe Rhodes </li>
   <li><a href="http://www-2.cs.cmu.edu/Groups//AI/html/faqs/lang/lisp/top.html">
   The old comp.lang.lisp FAQ</a> by Mark Kantrowitz </li>
   <li><a href="http://www.lisp.org/">The Association of Lisp Users</a> </li>
-  <li><a href="http://www.gigamonkeys.com/book/">Practical Common Lisp</a> by Peter Seibel</li>
   <li><a href="http://www-2.cs.cmu.edu/~dst/LispBook/">Common Lisp: A Gentle
   Introduction to Symbolic Computation</a> by David S. Touretzky </li>
   <li><a href="http://www.psg.com/~dlamkins/sl/cover.html">Successful Lisp: How
@@ -159,7 +160,7 @@ There's also a <a href="CHANGELOG">CHANGELOG</a> available. </p>
 <address>
   http://cl-cookbook.sourceforge.net/</address>
 <p><br>
-$Header: /cvsroot/cl-cookbook/cl-cookbook/index.html,v 1.37 2007/02/01 13:01:44 skeptomai Exp $ </p>
+$Header: /cvsroot/cl-cookbook/cl-cookbook/index.html,v 1.38 2007/11/01 07:41:01 nhabedi Exp $ </p>
 
 </body>
 
